// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removeClassName work correctly can remove children className 1`] = `
<body>
  .c0 {
  height: 28px;
  box-sizing: border-box;
  padding: 2px;
  position: relative;
  border-radius: 100vw;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 20px;
  color: #121212;
  background-color: #F3F3F3;
}

.c0.RcChip-focused,
.c0.focus-visible,
.c0[data-focus-visible-added] {
  background-color: rgba(73,73,73,0.16);
}

.c0.RcChip-focused:after,
.c0.focus-visible:after,
.c0[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #066FAC;
  border-radius: 100vw;
  pointer-events: none;
}

.c0:active {
  background-color: rgba(73,73,73,0.24);
}

.c0.RcChip-disabled {
  color: #C7C7C7;
  opacity: 1;
}

.c0 .RcChip-avatar {
  color: #FFFFFF;
  margin-left: 0px;
  margin-right: -4px;
}

.c0 .RcChip-avatar span {
  width: auto;
  height: auto;
}

@media (hover:hover) and (pointer:fine) {
  .c0:hover {
    background-color: rgba(73,73,73,0.12);
  }
}

<div>
    <div
      class="example-MuiChip-root c0 some-other-class"
      data-test-automation-class="selected-item"
      data-test-automation-value="example"
      tabindex="0"
    >
      <span
        class=""
      >
        example
      </span>
    </div>
  </div>
</body>
`;

exports[`removeClassName work correctly should remove parent className 1`] = `
.c0 {
  height: 28px;
  box-sizing: border-box;
  padding: 2px;
  position: relative;
  border-radius: 100vw;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 20px;
  color: #121212;
  background-color: #F3F3F3;
}

.c0.RcChip-focused,
.c0.focus-visible,
.c0[data-focus-visible-added] {
  background-color: rgba(73,73,73,0.16);
}

.c0.RcChip-focused:after,
.c0.focus-visible:after,
.c0[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #066FAC;
  border-radius: 100vw;
  pointer-events: none;
}

.c0:active {
  background-color: rgba(73,73,73,0.24);
}

.c0.RcChip-disabled {
  color: #C7C7C7;
  opacity: 1;
}

.c0 .RcChip-avatar {
  color: #FFFFFF;
  margin-left: 0px;
  margin-right: -4px;
}

.c0 .RcChip-avatar span {
  width: auto;
  height: auto;
}

@media (hover:hover) and (pointer:fine) {
  .c0:hover {
    background-color: rgba(73,73,73,0.12);
  }
}

<body>
  <div>
    <div
      class="c0 some-other-class"
      data-test-automation-class="selected-item"
      data-test-automation-value="example"
      tabindex="0"
    >
      <span
        class="example-MuiChip-label"
      >
        example
      </span>
    </div>
  </div>
</body>
`;
